--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.5.0",
     "framer-motion": "^5.2.1",
+    "mongodb": "^6.1.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.7",
     "typescript": "5.2.2"
+  },
+  "browser": {
+    "child_process": false
   }
 }
